[TASK-1] Rename template names  to project names

--- a/src/Host/ClientApp/public/manifest.json
+++ b/src/Host/ClientApp/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "YAGO.websitewithauthorization.Web",
-  "name": "YAGO.WebsiteWithAuthorization.Web",
+  "short_name": "YAGO.fantasyworld.Web",
+  "name": "YAGO.fantasyworld.Web",
   "icons": [
     {
       "src": "favicon.ico",
