--- a/src/Host/appsettings.json
+++ b/src/Host/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YAGO.WebsiteWithAuthorization;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=YAGO.FantasyWorld;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
