--- a/src/Application/YAGO.FantasyWorld.Application.csproj
+++ b/src/Application/YAGO.FantasyWorld.Application.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Domain\YAGO.WebsiteWithAuthorization.Domain.csproj" />
+    <ProjectReference Include="..\Domain\YAGO.FantasyWorld.Domain.csproj" />
   </ItemGroup>
 
 </Project>
