--- a/src/Infrastructure/YAGO.FantasyWorld.Infrastructure.csproj
+++ b/src/Infrastructure/YAGO.FantasyWorld.Infrastructure.csproj
@@ -20,8 +20,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Application\YAGO.WebsiteWithAuthorization.Application.csproj" />
-    <ProjectReference Include="..\Domain\YAGO.WebsiteWithAuthorization.Domain.csproj" />
+    <ProjectReference Include="..\Application\YAGO.FantasyWorld.Application.csproj" />
+    <ProjectReference Include="..\Domain\YAGO.FantasyWorld.Domain.csproj" />
   </ItemGroup>
 
 </Project>
